Add new text to main page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,5 +3,15 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="textjam">
-  <main>textjam</main>
+  <main>
+    <h1>
+      textjam
+    </h1>
+    <p>
+      everybody loves print(), System.out.println(), cout, printf(), and puts()
+    </p>
+    <p>
+      <strong>SO LETS MAKE SOMETHING COOL WITH THEM!</strong>
+    </p>
+  </main>
 </Layout>
