more basic intro page that leads to actual winter 2023 page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,14 +4,18 @@ import Layout from "../layouts/Layout.astro";
 
 <Layout title="textjam">
   <main>
-    <h1>
-      textjam
-    </h1>
-    <p>
-      everybody loves print(), System.out.println(), cout, printf(), and puts()
-    </p>
-    <p>
-      <strong>SO LETS MAKE SOMETHING COOL WITH THEM!</strong>
-    </p>
+    <pre>textjam
+
+-&gt; <a href="https://textjam.github.io/winter2023/">winter2023</a> &lt;-
+
+<a href="https://github.com/textjam/textjam.github.io">edit this site on github</a></pre>
   </main>
 </Layout>
+
+<style>
+  main {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+</style>
