--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -23,6 +23,7 @@ const { title } = Astro.props;
   :root {
     --bg: black;
     --fg: white;
+    --link: rgb(164 171 255);
     font-size: 24px;
   }
   html {
@@ -33,5 +34,9 @@ const { title } = Astro.props;
   }
   body {
     margin: 1rem;
+  }
+
+  a {
+    color: var(--link);
   }
 </style>
