white space pre-wrap for all pres

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -36,6 +36,10 @@ const { title } = Astro.props;
     margin: 1rem;
   }
 
+  pre {
+    white-space: pre-wrap;
+  }
+
   a {
     color: var(--link);
   }
